--- a/calculator.html
+++ b/calculator.html
@@ -15,6 +15,7 @@ function square() {
 </script>
 </head>
 <body>
+  <h1>Calculadora Daniel Saborido</h1>
   Number:
   <input type="text" id="n1"><p>
 
